--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^1.6.5",
     "bulma": "^0.9.4",
     "next": "14.0.4",
+    "next-redux-wrapper": "^8.1.0",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
